docs: Update API documentation and upgrade Swagger UI to v5.24.0
- Upgrade Swagger UI from v4.15.5 to v5.24.0 across all CDN references
- Update Swagger UI script references to use standalone preset bundle
- Fix Swagger UI OpenAPI spec URL path from relative to absolute (/openapi.yaml)
- Update navigation links to include separate ReDoc and Swagger UI options
- Replace generic "API Docs" link with dedicated documentation viewers
- Enhance OpenAPI metadata endpoint description with rate limiting information
- Improve dataset metadata documentation with freshness and rate limit details
- Update branding configuration to reflect dual documentation interface options

--- a/public/about.html
+++ b/public/about.html
@@ -308,7 +308,7 @@
         <span class="logo">devs.miami</span>
       </div>
       <div class="nav-links">
-        <a href="/api-docs.html" class="nav-link">API Docs</a><a href="/usage-guide.html" class="nav-link">Usage Guide</a><a href="/about.html" class="nav-link">About</a><a href="https://github.com" class="nav-link">GitHub</a>
+        <a href="/docs.html" class="nav-link">ReDoc</a><a href="/swagger-ui.html" class="nav-link">Swagger UI</a><a href="/usage-guide.html" class="nav-link">Usage Guide</a><a href="/about.html" class="nav-link">About</a><a href="https://github.com" class="nav-link">GitHub</a>
       </div>
     </div>
   </nav>
