--- a/public/usage-guide.html
+++ b/public/usage-guide.html
@@ -308,7 +308,7 @@
         <span class="logo">devs.miami</span>
       </div>
       <div class="nav-links">
-        <a href="/api-docs.html" class="nav-link">API Docs</a><a href="/usage-guide.html" class="nav-link">Usage Guide</a><a href="/about.html" class="nav-link">About</a><a href="https://github.com" class="nav-link">GitHub</a>
+        <a href="/docs.html" class="nav-link">ReDoc</a><a href="/swagger-ui.html" class="nav-link">Swagger UI</a><a href="/usage-guide.html" class="nav-link">Usage Guide</a><a href="/about.html" class="nav-link">About</a><a href="https://github.com" class="nav-link">GitHub</a>
       </div>
     </div>
   </nav>
